--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,29 +1,72 @@
+body {
+  border:1px solid red;
+  font-family: 'PT Serif', serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #5e5e5e;
+}
 * {
   box-sizing: border-box;
 }
-
 a {
   text-decoration: none;
   display: inline-block;
 }
-
 ul,li {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
+header{
+  font-family: 'Roboto', sans-serif;
+}
+.header_top {
+  background-color: #55AC14
+}
 .container {
   border:1px solid #FF8900;
   max-width: 1170px;
   margin: 0 auto;
   padding: 0 15px;
 }
-
-body {
-
+.header_qest {
+  float: right;
+  line-height: 36px;
+  color: white;
+  background-color: #79553d;
+  padding: 5px 20px 4px 50px;
+  font-size: 16px;
+  letter-spacing: 0.35px; /* расстояние между буквами */
+}
+.header_contacts:after{
+  content: "";
+  clear: both;
+  display: block;
+}
+.header_fon,
+.header_mail  {
+  color: white;
+  letter-spacing: 0.35px; /* расстояние между буквами */
+  line-height: 45px;
+}
+.header_fon{
+  padding-left: 20px;
+  padding-right: 30px;
 }
 
-.header_top {
-  background-color: #55AC14
+.header_content{
+  padding: 34px 0px 23px;
+}
+.header_content-inner{
+  display: flex;
+  justify-content: center;
+}
+.menu li{
+  display: inline-block;
+}
+.menu a{
+  color: #323232;
+  font-size: 21px;
+  line-height: 36px;
 }
