--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?dsm2ri');
-  src:  url('fonts/icomoon.eot?dsm2ri#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?dsm2ri') format('truetype'),
-    url('fonts/icomoon.woff?dsm2ri') format('woff'),
-    url('fonts/icomoon.svg?dsm2ri#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?dsm2ri');
+  src:  url('../fonts/icomoon.eot?dsm2ri#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?dsm2ri') format('truetype'),
+    url('../fonts/icomoon.woff?dsm2ri') format('woff'),
+    url('../fonts/icomoon.svg?dsm2ri#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
