--- a/CSS/style.css
+++ b/CSS/style.css
@@ -183,6 +183,10 @@ margin-right: -6px;
 .about_item{
   max-width: 360px;
   padding: 15px 0 40px;
+  position: relative;
+  min-height: 345px;
+  border-radius: 10px;
+  box-shadow: 0px 7px 24.3px 2.7px #B4F5A9;
 }
 .about_item-title{
   color: #210202;
@@ -194,9 +198,13 @@ margin-right: -6px;
 }
 .about_item-text{
   letter-spacing: 0.1px;
-  padding: 0 30px;
-  padding-bottom: 30px;
+  padding: 0 30px 30px;
 }
-.about_item-btn{
-  
+.about_item-btn a{
+  position: absolute;
+  bottom: 35px;
+  left: 20px;
+  font-family: 'Roboto', sans-serif;
+  border-bottom: 1px solid #050505;
+  color: #050505;
 }
