--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,7 +119,7 @@ li {
 /* ***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********  */
 
 .services{
-  padding: 50px 0 30px;
+  padding: 30px 0 30px;
 }
 .services_top{
   display: flex;
@@ -225,6 +225,7 @@ margin-right: -6px;
   min-height: 450px;
   background-repeat: no-repeat;
   padding: 25px 25px;
+  margin-bottom: 40px;
 }
 .about_inner{
   max-width: 545px;
@@ -233,7 +234,7 @@ margin-right: -6px;
   width: 545px;
   margin-right: 0;
   margin-left: auto;
-  margin-top: 60px;
+  margin-top: 40px;
   font-family: 'Roboto', sans-serif;
 }
 .about_title{
@@ -246,3 +247,107 @@ margin-right: -6px;
 font-size: 18px;
 line-height: 24px;
 }
+
+
+
+/* --*********** ВОПРОС         ВОПРОС         ВОПРОС         ВОПРОС         ***********    */
+.form_title-box{
+  max-width: 600px;
+  padding-left: 100px;
+  position: relative;
+}
+.form_title-box:before{content: "";
+position: absolute;
+width: 90px;
+height: 3px;
+left: 0;
+background-color: #55AC14;
+top: 15px;
+}
+.form_title{
+  font-size: 28px;
+  font-weight: 500px;
+  line-height: 32px;
+  font-family: 'Roboto', sans-serif;
+  color: #212020;
+  margin-bottom: 10px;
+}
+.form_text{
+  letter-spacing: 0.1px;
+  font-size: 19px;
+  font-weight: 500px;
+  line-height: 24px;
+  font-family: 'Roboto', sans-serif;
+  color: #212020;
+  margin-bottom: 10px;
+}
+
+.form_inner{
+  bor der: 1px solid red;
+  background-image: url(../img/form.jpg);
+  height: 600px;
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.form_box{
+  max-width: 745px;
+  padding-top: 45px;
+}
+.form_box-inner{
+  display: flex;
+  justify-content: space-between;
+}
+.form_box-inner label,
+.form_box-inner input,
+.form_box-inner button,
+.form_box-inner select{
+  display: block;
+  width: 250px;
+  line-height: 30px;
+}
+.form_box-inner p{
+  line-height: 10px;
+}
+.form_box-inner label{
+  line-height: 36px;
+  color: #212020;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+.form_box-left{
+  max-width: 260px;
+
+  margin-left: 30px
+}
+.form_box-right{
+  max-width: 555px;
+
+}
+textarea{
+  width: 400px;
+  height: 150px;
+  border-radius: 7px;
+  border: 2px solid #74BC37;
+}
+.form_box-inner input,
+.form_box-inner select{
+  margin-bottom: 15px;
+  border-radius: 7px;
+  border: 2px solid #74BC37;
+  outline: none;
+  padding: 0 7px;
+}
+.form_box-inner input:focus{
+  border: 2px solid green;
+  background-color: #ffffff;
+  border-radius: 7px;
+  background: #ffffff;
+
+}
+.form_box-inner textarea:focus{
+  border: 2px solid green;
+  background-color: #ffffff;
+  border-radius: 7px;
+  background: #ffffff;
+  outline: none;
+  padding: 7px 7px;
