--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -31,8 +31,20 @@
 .icon-check:before {
   content: "\f00c";
 }
+.icon-close:before {
+  content: "\f00d";
+}
+.icon-remove:before {
+  content: "\f00d";
+}
+.icon-times:before {
+  content: "\f00d";
+}
 .icon-map-marker:before {
   content: "\f041";
+}
+.icon-thumbs-o-down:before {
+  content: "\f088";
 }
 .icon-phone:before {
   content: "\f095";
