--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,7 +119,7 @@ li {
 /* ***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********  */
 
 .services{
-  padding: 30px 0 30px;
+  padding: 40px 0 30px;
 }
 .services_top{
   display: flex;
@@ -421,6 +421,9 @@ textarea{
 
 /* *********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    */
 
+.news{
+  padding: 40px 0 30px;
+}
 .news_top{
   display: flex;
   justify-content: space-between;
