--- a/CSS/style.css
+++ b/CSS/style.css
@@ -489,10 +489,37 @@ margin-right: -6px;
   width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 7px 24.3px 2.7px #B4F5A9;
+  padding: 60px 35px 45px 70px;
+  position: relative;
+
 }
+.news_slider:before{
+  font-family: 'icomoon';
+  content: "\f10e";
+  color: #ffffff;
+  background-color: #71BB2F;
+  font-size: 30px;
+  width: 70px;
+  height: 35px;
+  position: absolute;
+  text-align: center;
+  line-height: 34px;
+  top: -7px;
+  left: 10px;
+}
+.news_slider-title{
+  font-size: 18px;
+  line-height: 24px;
+  color: #242424;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.5px;
+  margin-bottom: 15px;
+  
+}
+.news_slider-text{
 
-
-
+}
 
 
 .news_blog{
