--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,9 @@ a {
   text-decoration: none;
   display: inline-block;
 }
+p {
+  text-indent: 1.2em ;
+}
 ul,li {
   list-style: none;
   margin: 0;
@@ -521,7 +524,6 @@ margin-right: -6px;
 
 }
 
-
 .news_blog{
   max-width: 260px;
   width: 100%;
@@ -552,5 +554,28 @@ margin-right: -6px;
 }
 .news_blog-text{
   letter-spacing: 0.1px;
+}
 
+
+/* *********** ФУТЕР       ФУТЕР       ФУТЕР        ***********    */
+
+.footer_content{
+  background-color: #595959;
+  padding: 20px 0px 30px;
+}
+.footer_inner{
+  display: flex;
+  justify-content: space-between;
+}
+.footer_inner .header_qest{
+  float: none;
+  display: inline-block;
+}
+.footer_map{
+  padding-top: 10px;
+}
+.footer_map iframe{
+  height: 250px;
+  width: 100%;
+  width: 630px;
 }
