--- a/CSS/media.css
+++ b/CSS/media.css
@@ -5,7 +5,32 @@
  .header_contacts{
    text-align: center;
  }
+ .header_qest:before{
+   display: none;
+ }
+ .header_qest-menu{
+   display: block;
+ }
+ .menu ul{
+   display: none;
+   position: absolute;
+   left: 0;
+   right: 0;
+   margin-top: 20px;
+   z-index: 50;
+ }
+ .menu li{
+   display: block;
+   text-align: center;
+ }
+ .menu a{
+   display: block;
+   background-color: #71BB2F;
+   border-top: 1px solid #ffffff;
+   border-bottom: : 1px solid #ffffff;
+ }
 }
+
 @media (max-width:400px){
   .header_qest:before{
     display: block;
@@ -13,7 +38,12 @@
   @media (max-width:375px){
     .header_mail{
       padding-right: 30px;
-      
-    }
 
+    }
 }
+
+  @media (min-width:375px){
+    .menu ul {
+      display: block !important;
+    }
+  }
