--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,8 @@
+@import "global";
 @import "header";
+@import "slider";
 .page {
-    border: 1px solid red;
+    // border: 1px solid red;
     font-family: 'PT Serif', serif;
     font-weight: 400;
     font-size: 14px;
