--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import "global";
 @import "header";
 @import "slider";
+@import "services";
 .page {
     // border: 1px solid red;
     font-family: 'PT Serif', serif;
