--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,8 @@
 @import "header";
 @import "slider";
 @import "services";
+@import "about";
+@import "form";
 .page {
     // border: 1px solid red;
     font-family: 'PT Serif', serif;
